--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -82,6 +82,17 @@
                   </span>
                   <span class="sidebar-label min-w-0 max-w-[12rem] overflow-hidden whitespace-nowrap transition-[opacity,max-width] duration-300 ease-in-out">Workspaces</span>
                 <% end %>
+
+                <%= link_to actors_path, class: "grid grid-cols-[2rem_1fr] items-center rounded-lg px-3 py-2 text-slate-700 transition hover:bg-slate-100" do %>
+                  <span class="inline-flex h-8 w-8 items-center justify-center">
+                    <svg class="h-5 w-5 text-slate-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493" />
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M9 19.128a9.38 9.38 0 0 1-2.625.372 9.337 9.337 0 0 1-4.121-.952 4.125 4.125 0 0 1 7.533-2.493" />
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M9 19.128v-.003c0-1.113.285-2.16.786-3.07m5.428 0A4.5 4.5 0 1 0 8.786 16.055m6.428 0A4.5 4.5 0 0 1 12 21.75a4.5 4.5 0 0 1-3.214-5.695" />
+                    </svg>
+                  </span>
+                  <span class="sidebar-label min-w-0 max-w-[12rem] overflow-hidden whitespace-nowrap transition-[opacity,max-width] duration-300 ease-in-out">Actors</span>
+                <% end %>
               </div>
             </nav>
             <div class="border-t border-slate-200 px-3 py-4">
